--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="card" style="--clr:#ff3e7f;">
             <div class="imgBx">
-                <img src="./Img/Img4.png" alt="">
+                <img src="Im4.jpeg" alt="">
             </div>
             <div class="Content">
                 <h2>Converciones</h2>
